--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # VS Code
 .vscode/launch.json
 
+# Firestore ket
+firestore_key.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
