--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # VS Code
 .vscode/launch.json
 
-# Firestore ket
+# Firestore key
 firestore_key.json
+
+# Log file
+log.txt
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
