--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 # Discord (Of course)
 discord.py==1.6
-ffmpeg==1.4
-youtube_dl==2019.10.16
-google-cloud-firestore==1.6.0
-timeago==1.0.10
-psutil==5.6.7
+ffmpeg>=1.4
+youtube_dl>=2019.10.16
+google-cloud-firestore>=1.6.0
+timeago
+psutil>=5.6.7
 saucenao-api==2.3.0
